test/basic/good/core016.lat
int main() {
	string x = "a
			sdf";
	return 0;
}
