test/basic/bad/core008.lat
int main() {
	int x;
	x = true;
	x = "asdf";
	return 0;
}
